--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
   "homepage": "https://github.com/getmahen/NodeWebApi#readme",
   "dependencies": {
     "body-parser": "^1.15.2",
-    "express": "^4.14.0"
+    "express": "^4.14.0",
+    "lodash": "^4.16.4",
+    "mongoose": "^4.6.5"
   }
 }
