--- a/package.json
+++ b/package.json
@@ -17,9 +17,11 @@
   },
   "homepage": "https://github.com/getmahen/NodeWebApi#readme",
   "dependencies": {
+    "async": "^2.1.2",
     "body-parser": "^1.15.2",
     "express": "^4.14.0",
     "lodash": "^4.16.4",
-    "mongoose": "^4.6.5"
+    "mongoose": "^4.6.5",
+    "request": "^2.76.0"
   }
 }
